@@ -215,6 +215,18 @@ None.
     been created to handle the request. So such rules should probably
     exclude the firewall's IP addresses in the ORIGINAL DEST column.
 
+2)  Previously, the following sequence of policies would produce a
+    'Duplicate Policy' error:
+
+    	     $FW             all             ACCEPT
+    	     $FW             dmz             REJECT          info
+
+    Begining with 4.4.5, this sequence produces the same result as this
+    one:
+
+    	     $FW             dmz             REJECT          info
+    	     $FW             all             ACCEPT
+
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 4 . 0
 ----------------------------------------------------------------------------
