@@ -8,6 +8,8 @@ Changes in Shorewall 4.4.5
 
 4)  Allow zone::serverport in rules DEST column.
 
+5)  Allow specific policy to supersede a wildcard policy.
+
 Changes in Shorewall 4.4.4
 
 1)  Change STARTUP_LOG and LOG_VERBOSITY in default shorewall6.conf.
